visibility fixed/aligned branch

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,9 @@ body {
     background-color: rgb(62, 49, 126);
     margin: auto;
     padding: 20px;
+    border-radius: 10px;
+    margin-top: 30px;
+    margin-bottom: 30px;
 }
 
 p, .row {
